# runtime-contract-communications

./: Cargo.toml  README.md
contracts/example-random-extension/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/contracts/: Cargo.toml
pallets/contracts/src/: gas.rs
pallets/contracts/src/wasm/: code_cache.rs  runtime.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
smart-contracts/erc20/: Cargo.toml  lib.rs
smart-contracts/example-extension/: Cargo.toml  lib.rs
